[package]
name = "ratatui-sectioned-list"
version = "0.1.0"
edition = "2021"
description = "Layout, focus, scroll, and hit-test primitives for a sectioned (header + variable-height row) list — UI-framework agnostic, pure u16 geometry."
license = "Apache-2.0"
repository = "https://github.com/deck-support/ratatui-sectioned-list"
keywords = ["ratatui", "tui", "widget", "list", "scroll"]
categories = ["command-line-interface"]
readme = "README.md"
exclude = [
    "/.github/",
    "/SCR-*.png",
    "/.gitignore",
]

[dependencies]

[dev-dependencies]
ratatui = "0.30"
crossterm = "0.29"
